--- a/olxReact/src/Components/Card/Card.css
+++ b/olxReact/src/Components/Card/Card.css
@@ -24,6 +24,7 @@
 .product_img{
     object-fit: contain;
     width: 15rem;
+    height: 11rem;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 2px;
