--- a/olxReact/src/Components/Profile/Profile.css
+++ b/olxReact/src/Components/Profile/Profile.css
@@ -7,10 +7,11 @@
     border: 1px solid blue;
     border-radius: 10px;
     padding: 15px;
-    padding-left: 70px;
+    padding-left: 90px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     line-height: 1.9rem;
     width: 30rem;
+    max-width: 25rem;
     margin: auto;
 }
 .profile_product_div{
