--- a/olxReact/src/Components/EditProduct/EditProduct.css
+++ b/olxReact/src/Components/EditProduct/EditProduct.css
@@ -7,7 +7,7 @@
 }
 .edit_div{
     width: 40%;
-    height: 80%;
+    height: 90%;
     border: 1px solid blue;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
 }
 .edit_logo{
     width: 100%;
-    height: 50%;
+    height: 30%;
 }
 .edit_img{
     margin-left: 8rem;
@@ -55,4 +55,13 @@
 .edit_upload_img{
     background-color: transparent;
     border-bottom: 1px solid blue;
+}
+/* .edit_product_img_div{
+    width: 5rem;
+    height: 6rem;
+    object-fit: contain;
+} */
+.edit_product_img{
+    width: 4rem;
+    object-fit: contain;
 }
