--- a/olxReact/src/Components/Login/LoginComponent.css
+++ b/olxReact/src/Components/Login/LoginComponent.css
@@ -7,7 +7,7 @@
 }
 .login_div{
     width: 40%;
-    height: 50%;
+    height: 70%;
     border: 1px solid blue;
     display: flex;
     flex-direction: column;
@@ -51,4 +51,14 @@
 }
 .login_button:hover{
     border-bottom: 2px solid blue;    
+}
+.error_box{
+    width: 100%;
+    height: 2rem;
+    border: 1px solid red;
+    border-radius: 8px;
+    color: red;
+    text-align: center;
+    padding: 2px;
+    font-size: medium;
 }
