--- a/olxReact/src/Components/SignUp/SignUpComponent.css
+++ b/olxReact/src/Components/SignUp/SignUpComponent.css
@@ -7,7 +7,7 @@
 }
 .signup_div{
     width: 40%;
-    height: 80%;
+    height: 90%;
     border: 1px solid blue;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
 }
 .signup_logo{
     width: 100%;
-    height: 50%;
+    height: 40%;
 }
 .signup_img{
     margin-left: 8rem;
@@ -51,4 +51,14 @@
 }
 .signup_button:hover{
     border-bottom: 2px solid blue;    
+}
+.error_box{
+    width: 100%;
+    height: 2rem;
+    border: 1px solid red;
+    border-radius: 8px;
+    color: red;
+    text-align: center;
+    padding: 2px;
+    font-size: medium;
 }
