--- a/olxReact/src/Components/SellProduct/SellProduct.css
+++ b/olxReact/src/Components/SellProduct/SellProduct.css
@@ -56,3 +56,13 @@
     background-color: transparent;
     border-bottom: 1px solid blue;
 }
+.error_box{
+    width: 100%;
+    height: 2rem;
+    border: 1px solid red;
+    border-radius: 8px;
+    color: red;
+    text-align: center;
+    padding: 2px;
+    font-size: medium;
+}
