--- a/olxReact/src/Components/EditProduct/EditProduct.css
+++ b/olxReact/src/Components/EditProduct/EditProduct.css
@@ -65,3 +65,13 @@
     width: 4rem;
     object-fit: contain;
 }
+.error_box{
+    width: 100%;
+    height: 2rem;
+    border: 1px solid red;
+    border-radius: 8px;
+    color: red;
+    text-align: center;
+    padding: 2px;
+    font-size: medium;
+}
